<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">eNote</string>
    <string name="home_icon">Home</string>
    <string name="trash_icon">Trash</string>
    <string name="settings_icon">Settings</string>
    <string name="share_icon">Share</string>
    <string name="version_icon">Version</string>
    <string name="input_phone_number">Input your phone number</string>
    <string name="continue_button_cd">Continue</string>
    <string name="letter_image_cd">Letter image</string>
    <string name="input_code">We sent a code to your number. Input it here:</string>
    <string name="log_in_button">Log in</string>
    <string name="log_out_button">Log out</string>
    <string name="logged_in_text">You are logged in</string>
    <string name="phone_hint" translatable="false">+7 (999) 999 99-99</string>
    <string name="code_hint" translatable="false">0</string>
    <string name="app_version" translatable="false">0.99 alpha</string>
    <string name="u_text" translatable="false"><u>U</u></string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="change_priority">Change priority</string>
    <string name="restore">Restore</string>
    <string name="clean_trash">Empty Trash</string>
    <string name="edit_name_title">Input new name</string>
    <string name="edit_name_hint">New name</string>
    <string name="change_priority_title">Input new priority</string>
    <string name="change_priority_hint" translatable="false">0</string>
    <string name="create_category_title">New category</string>
    <string name="category_name_hint">New category name</string>
    <string name="category_priority_text">New category priority</string>
    <string name="enter_with_phone_text">Sing in with your phone number to use synchronization</string>
    <string name="empty_trash_toast">The trash has been emptied</string>
</resources>